# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

config("print_interfaces_kits_napi_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = [ "-fexceptions" ]
}
ohos_shared_library("print_napi") {
  include_dirs = [
    "//foundation/arkui/ace_engine/frameworks/base/utils",
    "//foundation/arkui/napi",
    "//foundation/arkui/napi/interfaces/kits",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//third_party/node/src",
    "//third_party/curl/include",
    "${ability_runtime_services_path}/common/include",
    "//utils/system/safwk/native/include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/app/",
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "${ability_runtime_services_path}/abilitymgr/include",
    "${ability_runtime_inner_api_path}/ability_manager/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/Isamgr",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "${print_utils_path}/include",
    "${print_path}/frameworks/innerkitsimpl/include",
  ]


  public_configs = [ ":print_interfaces_kits_napi_config" ]

  sources = [
    "src/napi_inner_print.cpp",
    "src/napi_print_ext.cpp",
    "src/napi_print_task.cpp",
    "src/print_async_call.cpp",
    "src/print_module.cpp",
    "src/print_task.cpp",
  ]
  deps = [
    "${print_path}/frameworks/innerkitsimpl:print_client",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "preferences:native_preferences",
    "relational_store:native_appdatafwk",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
  ]
  relative_install_dir = "module"
  subsystem_name = "print"
  part_name = "print_fwk"
}
