# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

if (print_fwk_feature_bsuni_driver) {
  ohos_prebuilt_shared_library("bsuni_driver_sdk") {
    source = "${bsuni_binary_path}/lib64/libbsUniDiscovery.so"
    part_name = "print_fwk"
    subsystem_name = "print"
    module_install_dir = "${bsuni_binary_install_path}/lib64"
    install_enable = true
  }

  ohos_prebuilt_executable("bsuni_driver_filter") {
    source = "${bsuni_binary_path}/filter/bsUniFilter"
    part_name = "print_fwk"
    subsystem_name = "print"
    module_install_dir = "${bsuni_binary_install_path}/filter"
    install_enable = true
  }

  ohos_prebuilt_executable("bsuni_driver_backend_lpd") {
    source = "${bsuni_binary_path}/backend/lpd"
    part_name = "print_fwk"
    subsystem_name = "print"
    module_install_dir = "${bsuni_binary_install_path}/backend"
    install_enable = true
  }

  ohos_prebuilt_executable("bsuni_driver_backend_socket") {
    source = "${bsuni_binary_path}/backend/socket"
    part_name = "print_fwk"
    subsystem_name = "print"
    module_install_dir = "${bsuni_binary_install_path}/backend"
    install_enable = true
  }

  ohos_prebuilt_executable("bsuni_driver_backend_bsuni") {
    source = "${bsuni_binary_path}/backend/bsUniBackend"
    part_name = "print_fwk"
    subsystem_name = "print"
    module_install_dir = "${bsuni_binary_install_path}/backend"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_bin") {
    sources = [
      "${bsuni_gsbin_path}/dvipdf",
      "${bsuni_gsbin_path}/eps2eps",
      "${bsuni_gsbin_path}/gs",
      "${bsuni_gsbin_path}/gsbj",
      "${bsuni_gsbin_path}/gsdj",
      "${bsuni_gsbin_path}/gsdj500",
      "${bsuni_gsbin_path}/gslj",
      "${bsuni_gsbin_path}/gslp",
      "${bsuni_gsbin_path}/gsnd",
      "${bsuni_gsbin_path}/lprsetup.sh",
      "${bsuni_gsbin_path}/pdf2dsc",
      "${bsuni_gsbin_path}/pdf2ps",
      "${bsuni_gsbin_path}/pf2afm",
      "${bsuni_gsbin_path}/pfbtopfa",
      "${bsuni_gsbin_path}/pphs",
      "${bsuni_gsbin_path}/printafm",
      "${bsuni_gsbin_path}/ps2ascii",
      "${bsuni_gsbin_path}/ps2epsi",
      "${bsuni_gsbin_path}/ps2pdf",
      "${bsuni_gsbin_path}/ps2pdf12",
      "${bsuni_gsbin_path}/ps2pdf13",
      "${bsuni_gsbin_path}/ps2pdf14",
      "${bsuni_gsbin_path}/ps2pdfwr",
      "${bsuni_gsbin_path}/ps2ps",
      "${bsuni_gsbin_path}/ps2ps2",
      "${bsuni_gsbin_path}/unix-lpr.sh",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "bin"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsbin_install_path}"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_lib") {
    sources = [
      "${bsuni_gslib_path}/PDFA_def.ps",
      "${bsuni_gslib_path}/PDFX_def.ps",
      "${bsuni_gslib_path}/acctest.ps",
      "${bsuni_gslib_path}/align.ps",
      "${bsuni_gslib_path}/bj8.rpd",
      "${bsuni_gslib_path}/bj8gc12f.upp",
      "${bsuni_gslib_path}/bj8hg12f.upp",
      "${bsuni_gslib_path}/bj8oh06n.upp",
      "${bsuni_gslib_path}/bj8pa06n.upp",
      "${bsuni_gslib_path}/bj8pp12f.upp",
      "${bsuni_gslib_path}/bj8ts06n.upp",
      "${bsuni_gslib_path}/bjc610a0.upp",
      "${bsuni_gslib_path}/bjc610a1.upp",
      "${bsuni_gslib_path}/bjc610a2.upp",
      "${bsuni_gslib_path}/bjc610a3.upp",
      "${bsuni_gslib_path}/bjc610a4.upp",
      "${bsuni_gslib_path}/bjc610a5.upp",
      "${bsuni_gslib_path}/bjc610a6.upp",
      "${bsuni_gslib_path}/bjc610a7.upp",
      "${bsuni_gslib_path}/bjc610a8.upp",
      "${bsuni_gslib_path}/bjc610b1.upp",
      "${bsuni_gslib_path}/bjc610b2.upp",
      "${bsuni_gslib_path}/bjc610b3.upp",
      "${bsuni_gslib_path}/bjc610b4.upp",
      "${bsuni_gslib_path}/bjc610b6.upp",
      "${bsuni_gslib_path}/bjc610b7.upp",
      "${bsuni_gslib_path}/bjc610b8.upp",
      "${bsuni_gslib_path}/caption.ps",
      "${bsuni_gslib_path}/cbjc600.ppd",
      "${bsuni_gslib_path}/cbjc800.ppd",
      "${bsuni_gslib_path}/cdj550.upp",
      "${bsuni_gslib_path}/cdj690.upp",
      "${bsuni_gslib_path}/cdj690ec.upp",
      "${bsuni_gslib_path}/cid2code.ps",
      "${bsuni_gslib_path}/dnj750c.upp",
      "${bsuni_gslib_path}/dnj750m.upp",
      "${bsuni_gslib_path}/docie.ps",
      "${bsuni_gslib_path}/font2pcl.ps",
      "${bsuni_gslib_path}/ghostpdf.ppd",
      "${bsuni_gslib_path}/gs_ce_e.ps",
      "${bsuni_gslib_path}/gs_css_e.ps",
      "${bsuni_gslib_path}/gs_il2_e.ps",
      "${bsuni_gslib_path}/gs_kanji.ps",
      "${bsuni_gslib_path}/gs_ksb_e.ps",
      "${bsuni_gslib_path}/gs_l.xbm",
      "${bsuni_gslib_path}/gs_l.xpm",
      "${bsuni_gslib_path}/gs_l_m.xbm",
      "${bsuni_gslib_path}/gs_lgo_e.ps",
      "${bsuni_gslib_path}/gs_lgx_e.ps",
      "${bsuni_gslib_path}/gs_m.xbm",
      "${bsuni_gslib_path}/gs_m.xpm",
      "${bsuni_gslib_path}/gs_m_m.xbm",
      "${bsuni_gslib_path}/gs_s.xbm",
      "${bsuni_gslib_path}/gs_s.xpm",
      "${bsuni_gslib_path}/gs_s_m.xbm",
      "${bsuni_gslib_path}/gs_t.xbm",
      "${bsuni_gslib_path}/gs_t.xpm",
      "${bsuni_gslib_path}/gs_t_m.xbm",
      "${bsuni_gslib_path}/gs_wl1_e.ps",
      "${bsuni_gslib_path}/gs_wl2_e.ps",
      "${bsuni_gslib_path}/gs_wl5_e.ps",
      "${bsuni_gslib_path}/gslp.ps",
      "${bsuni_gslib_path}/gsnup.ps",
      "${bsuni_gslib_path}/ht_ccsto.ps",
      "${bsuni_gslib_path}/image-qa.ps",
      "${bsuni_gslib_path}/jispaper.ps",
      "${bsuni_gslib_path}/landscap.ps",
      "${bsuni_gslib_path}/lines.ps",
      "${bsuni_gslib_path}/mkcidfm.ps",
      "${bsuni_gslib_path}/necp2x.upp",
      "${bsuni_gslib_path}/necp2x6.upp",
      "${bsuni_gslib_path}/pdf2dsc.ps",
      "${bsuni_gslib_path}/pdf_info.ps",
      "${bsuni_gslib_path}/pf2afm.ps",
      "${bsuni_gslib_path}/pfbtopfa.ps",
      "${bsuni_gslib_path}/ppath.ps",
      "${bsuni_gslib_path}/pphs.ps",
      "${bsuni_gslib_path}/prfont.ps",
      "${bsuni_gslib_path}/printafm.ps",
      "${bsuni_gslib_path}/ps2ai.ps",
      "${bsuni_gslib_path}/ps2epsi.ps",
      "${bsuni_gslib_path}/ras1.upp",
      "${bsuni_gslib_path}/ras24.upp",
      "${bsuni_gslib_path}/ras3.upp",
      "${bsuni_gslib_path}/ras32.upp",
      "${bsuni_gslib_path}/ras4.upp",
      "${bsuni_gslib_path}/ras8m.upp",
      "${bsuni_gslib_path}/rollconv.ps",
      "${bsuni_gslib_path}/st640ih.upp",
      "${bsuni_gslib_path}/st640ihg.upp",
      "${bsuni_gslib_path}/st640p.upp",
      "${bsuni_gslib_path}/st640pg.upp",
      "${bsuni_gslib_path}/st640pl.upp",
      "${bsuni_gslib_path}/st640plg.upp",
      "${bsuni_gslib_path}/stc.upp",
      "${bsuni_gslib_path}/stc1520h.upp",
      "${bsuni_gslib_path}/stc2.upp",
      "${bsuni_gslib_path}/stc200_h.upp",
      "${bsuni_gslib_path}/stc2_h.upp",
      "${bsuni_gslib_path}/stc2s_h.upp",
      "${bsuni_gslib_path}/stc300.upp",
      "${bsuni_gslib_path}/stc300bl.upp",
      "${bsuni_gslib_path}/stc300bm.upp",
      "${bsuni_gslib_path}/stc500p.upp",
      "${bsuni_gslib_path}/stc500ph.upp",
      "${bsuni_gslib_path}/stc600ih.upp",
      "${bsuni_gslib_path}/stc600p.upp",
      "${bsuni_gslib_path}/stc600pl.upp",
      "${bsuni_gslib_path}/stc640p.upp",
      "${bsuni_gslib_path}/stc800ih.upp",
      "${bsuni_gslib_path}/stc800p.upp",
      "${bsuni_gslib_path}/stc800pl.upp",
      "${bsuni_gslib_path}/stc_h.upp",
      "${bsuni_gslib_path}/stc_l.upp",
      "${bsuni_gslib_path}/stcany.upp",
      "${bsuni_gslib_path}/stcany_h.upp",
      "${bsuni_gslib_path}/stcinfo.ps",
      "${bsuni_gslib_path}/stcolor.ps",
      "${bsuni_gslib_path}/stocht.ps",
      "${bsuni_gslib_path}/traceimg.ps",
      "${bsuni_gslib_path}/traceop.ps",
      "${bsuni_gslib_path}/uninfo.ps",
      "${bsuni_gslib_path}/viewcmyk.ps",
      "${bsuni_gslib_path}/viewgif.ps",
      "${bsuni_gslib_path}/viewjpeg.ps",
      "${bsuni_gslib_path}/viewmiff.ps",
      "${bsuni_gslib_path}/viewpbm.ps",
      "${bsuni_gslib_path}/viewpcx.ps",
      "${bsuni_gslib_path}/viewps2a.ps",
      "${bsuni_gslib_path}/winmaps.ps",
      "${bsuni_gslib_path}/zeroline.ps",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gslib_install_path}"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_cidfsubst") {
    sources = [ "${bsuni_gsres_path}/CIDFSubst/DroidSansFallback.ttf" ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/CIDFSubst"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_cidfont") {
    sources = [ "${bsuni_gsres_path}/CIDFont/ArtifexBullet" ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/CIDFont"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_cmap") {
    sources = [
      "${bsuni_gsres_path}/CMap/78-EUC-H",
      "${bsuni_gsres_path}/CMap/78-EUC-V",
      "${bsuni_gsres_path}/CMap/78-H",
      "${bsuni_gsres_path}/CMap/78-RKSJ-H",
      "${bsuni_gsres_path}/CMap/78-RKSJ-V",
      "${bsuni_gsres_path}/CMap/78-V",
      "${bsuni_gsres_path}/CMap/78ms-RKSJ-H",
      "${bsuni_gsres_path}/CMap/78ms-RKSJ-V",
      "${bsuni_gsres_path}/CMap/83pv-RKSJ-H",
      "${bsuni_gsres_path}/CMap/90ms-RKSJ-H",
      "${bsuni_gsres_path}/CMap/90ms-RKSJ-V",
      "${bsuni_gsres_path}/CMap/90msp-RKSJ-H",
      "${bsuni_gsres_path}/CMap/90msp-RKSJ-V",
      "${bsuni_gsres_path}/CMap/90pv-RKSJ-H",
      "${bsuni_gsres_path}/CMap/90pv-RKSJ-V",
      "${bsuni_gsres_path}/CMap/Add-H",
      "${bsuni_gsres_path}/CMap/Add-RKSJ-H",
      "${bsuni_gsres_path}/CMap/Add-RKSJ-V",
      "${bsuni_gsres_path}/CMap/Add-V",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-0",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-1",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-2",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-3",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-4",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-5",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-6",
      "${bsuni_gsres_path}/CMap/Adobe-CNS1-7",
      "${bsuni_gsres_path}/CMap/Adobe-GB1-0",
      "${bsuni_gsres_path}/CMap/Adobe-GB1-1",
      "${bsuni_gsres_path}/CMap/Adobe-GB1-2",
      "${bsuni_gsres_path}/CMap/Adobe-GB1-3",
      "${bsuni_gsres_path}/CMap/Adobe-GB1-4",
      "${bsuni_gsres_path}/CMap/Adobe-GB1-5",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-0",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-1",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-2",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-3",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-4",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-5",
      "${bsuni_gsres_path}/CMap/Adobe-Japan1-6",
      "${bsuni_gsres_path}/CMap/Adobe-Japan2-0",
      "${bsuni_gsres_path}/CMap/Adobe-Korea1-0",
      "${bsuni_gsres_path}/CMap/Adobe-Korea1-1",
      "${bsuni_gsres_path}/CMap/Adobe-Korea1-2",
      "${bsuni_gsres_path}/CMap/B5-H",
      "${bsuni_gsres_path}/CMap/B5-V",
      "${bsuni_gsres_path}/CMap/B5pc-H",
      "${bsuni_gsres_path}/CMap/B5pc-V",
      "${bsuni_gsres_path}/CMap/CNS-EUC-H",
      "${bsuni_gsres_path}/CMap/CNS-EUC-V",
      "${bsuni_gsres_path}/CMap/CNS1-H",
      "${bsuni_gsres_path}/CMap/CNS1-V",
      "${bsuni_gsres_path}/CMap/CNS2-H",
      "${bsuni_gsres_path}/CMap/CNS2-V",
      "${bsuni_gsres_path}/CMap/ETHK-B5-H",
      "${bsuni_gsres_path}/CMap/ETHK-B5-V",
      "${bsuni_gsres_path}/CMap/ETen-B5-H",
      "${bsuni_gsres_path}/CMap/ETen-B5-V",
      "${bsuni_gsres_path}/CMap/ETenms-B5-H",
      "${bsuni_gsres_path}/CMap/ETenms-B5-V",
      "${bsuni_gsres_path}/CMap/EUC-H",
      "${bsuni_gsres_path}/CMap/EUC-V",
      "${bsuni_gsres_path}/CMap/Ext-H",
      "${bsuni_gsres_path}/CMap/Ext-RKSJ-H",
      "${bsuni_gsres_path}/CMap/Ext-RKSJ-V",
      "${bsuni_gsres_path}/CMap/Ext-V",
      "${bsuni_gsres_path}/CMap/GB-EUC-H",
      "${bsuni_gsres_path}/CMap/GB-EUC-V",
      "${bsuni_gsres_path}/CMap/GB-H",
      "${bsuni_gsres_path}/CMap/GB-V",
      "${bsuni_gsres_path}/CMap/GBK-EUC-H",
      "${bsuni_gsres_path}/CMap/GBK-EUC-V",
      "${bsuni_gsres_path}/CMap/GBK2K-H",
      "${bsuni_gsres_path}/CMap/GBK2K-V",
      "${bsuni_gsres_path}/CMap/GBKp-EUC-H",
      "${bsuni_gsres_path}/CMap/GBKp-EUC-V",
      "${bsuni_gsres_path}/CMap/GBT-EUC-H",
      "${bsuni_gsres_path}/CMap/GBT-EUC-V",
      "${bsuni_gsres_path}/CMap/GBT-H",
      "${bsuni_gsres_path}/CMap/GBT-V",
      "${bsuni_gsres_path}/CMap/GBTpc-EUC-H",
      "${bsuni_gsres_path}/CMap/GBTpc-EUC-V",
      "${bsuni_gsres_path}/CMap/GBpc-EUC-H",
      "${bsuni_gsres_path}/CMap/GBpc-EUC-V",
      "${bsuni_gsres_path}/CMap/H",
      "${bsuni_gsres_path}/CMap/HKdla-B5-H",
      "${bsuni_gsres_path}/CMap/HKdla-B5-V",
      "${bsuni_gsres_path}/CMap/HKdlb-B5-H",
      "${bsuni_gsres_path}/CMap/HKdlb-B5-V",
      "${bsuni_gsres_path}/CMap/HKgccs-B5-H",
      "${bsuni_gsres_path}/CMap/HKgccs-B5-V",
      "${bsuni_gsres_path}/CMap/HKm314-B5-H",
      "${bsuni_gsres_path}/CMap/HKm314-B5-V",
      "${bsuni_gsres_path}/CMap/HKm471-B5-H",
      "${bsuni_gsres_path}/CMap/HKm471-B5-V",
      "${bsuni_gsres_path}/CMap/HKscs-B5-H",
      "${bsuni_gsres_path}/CMap/HKscs-B5-V",
      "${bsuni_gsres_path}/CMap/Hankaku",
      "${bsuni_gsres_path}/CMap/Hiragana",
      "${bsuni_gsres_path}/CMap/Hojo-EUC-H",
      "${bsuni_gsres_path}/CMap/Hojo-EUC-V",
      "${bsuni_gsres_path}/CMap/Hojo-H",
      "${bsuni_gsres_path}/CMap/Hojo-V",
      "${bsuni_gsres_path}/CMap/Identity-H",
      "${bsuni_gsres_path}/CMap/Identity-UTF16-H",
      "${bsuni_gsres_path}/CMap/Identity-V",
      "${bsuni_gsres_path}/CMap/KSC-EUC-H",
      "${bsuni_gsres_path}/CMap/KSC-EUC-V",
      "${bsuni_gsres_path}/CMap/KSC-H",
      "${bsuni_gsres_path}/CMap/KSC-Johab-H",
      "${bsuni_gsres_path}/CMap/KSC-Johab-V",
      "${bsuni_gsres_path}/CMap/KSC-V",
      "${bsuni_gsres_path}/CMap/KSCms-UHC-H",
      "${bsuni_gsres_path}/CMap/KSCms-UHC-HW-H",
      "${bsuni_gsres_path}/CMap/KSCms-UHC-HW-V",
      "${bsuni_gsres_path}/CMap/KSCms-UHC-V",
      "${bsuni_gsres_path}/CMap/KSCpc-EUC-H",
      "${bsuni_gsres_path}/CMap/KSCpc-EUC-V",
      "${bsuni_gsres_path}/CMap/Katakana",
      "${bsuni_gsres_path}/CMap/NWP-H",
      "${bsuni_gsres_path}/CMap/NWP-V",
      "${bsuni_gsres_path}/CMap/RKSJ-H",
      "${bsuni_gsres_path}/CMap/RKSJ-V",
      "${bsuni_gsres_path}/CMap/Roman",
      "${bsuni_gsres_path}/CMap/UniCNS-UCS2-H",
      "${bsuni_gsres_path}/CMap/UniCNS-UCS2-V",
      "${bsuni_gsres_path}/CMap/UniCNS-UTF16-H",
      "${bsuni_gsres_path}/CMap/UniCNS-UTF16-V",
      "${bsuni_gsres_path}/CMap/UniCNS-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniCNS-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniCNS-UTF8-H",
      "${bsuni_gsres_path}/CMap/UniCNS-UTF8-V",
      "${bsuni_gsres_path}/CMap/UniGB-UCS2-H",
      "${bsuni_gsres_path}/CMap/UniGB-UCS2-V",
      "${bsuni_gsres_path}/CMap/UniGB-UTF16-H",
      "${bsuni_gsres_path}/CMap/UniGB-UTF16-V",
      "${bsuni_gsres_path}/CMap/UniGB-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniGB-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniGB-UTF8-H",
      "${bsuni_gsres_path}/CMap/UniGB-UTF8-V",
      "${bsuni_gsres_path}/CMap/UniHojo-UCS2-H",
      "${bsuni_gsres_path}/CMap/UniHojo-UCS2-V",
      "${bsuni_gsres_path}/CMap/UniHojo-UTF16-H",
      "${bsuni_gsres_path}/CMap/UniHojo-UTF16-V",
      "${bsuni_gsres_path}/CMap/UniHojo-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniHojo-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniHojo-UTF8-H",
      "${bsuni_gsres_path}/CMap/UniHojo-UTF8-V",
      "${bsuni_gsres_path}/CMap/UniJIS-UCS2-H",
      "${bsuni_gsres_path}/CMap/UniJIS-UCS2-HW-H",
      "${bsuni_gsres_path}/CMap/UniJIS-UCS2-HW-V",
      "${bsuni_gsres_path}/CMap/UniJIS-UCS2-V",
      "${bsuni_gsres_path}/CMap/UniJIS-UTF16-H",
      "${bsuni_gsres_path}/CMap/UniJIS-UTF16-V",
      "${bsuni_gsres_path}/CMap/UniJIS-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniJIS-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniJIS-UTF8-H",
      "${bsuni_gsres_path}/CMap/UniJIS-UTF8-V",
      "${bsuni_gsres_path}/CMap/UniJIS2004-UTF16-H",
      "${bsuni_gsres_path}/CMap/UniJIS2004-UTF16-V",
      "${bsuni_gsres_path}/CMap/UniJIS2004-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniJIS2004-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniJIS2004-UTF8-H",
      "${bsuni_gsres_path}/CMap/UniJIS2004-UTF8-V",
      "${bsuni_gsres_path}/CMap/UniJISPro-UCS2-HW-V",
      "${bsuni_gsres_path}/CMap/UniJISPro-UCS2-V",
      "${bsuni_gsres_path}/CMap/UniJISPro-UTF8-V",
      "${bsuni_gsres_path}/CMap/UniJISX0213-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniJISX0213-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniJISX02132004-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniJISX02132004-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniKS-UCS2-H",
      "${bsuni_gsres_path}/CMap/UniKS-UCS2-V",
      "${bsuni_gsres_path}/CMap/UniKS-UTF16-H",
      "${bsuni_gsres_path}/CMap/UniKS-UTF16-V",
      "${bsuni_gsres_path}/CMap/UniKS-UTF32-H",
      "${bsuni_gsres_path}/CMap/UniKS-UTF32-V",
      "${bsuni_gsres_path}/CMap/UniKS-UTF8-H",
      "${bsuni_gsres_path}/CMap/UniKS-UTF8-V",
      "${bsuni_gsres_path}/CMap/V",
      "${bsuni_gsres_path}/CMap/WP-Symbol",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/CMap"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_colorspace") {
    sources = [
      "${bsuni_gsres_path}/ColorSpace/DefaultCMYK",
      "${bsuni_gsres_path}/ColorSpace/DefaultGray",
      "${bsuni_gsres_path}/ColorSpace/DefaultRGB",
      "${bsuni_gsres_path}/ColorSpace/TrivialCMYK",
      "${bsuni_gsres_path}/ColorSpace/sGray",
      "${bsuni_gsres_path}/ColorSpace/sRGB",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/ColorSpace"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_decoding") {
    sources = [
      "${bsuni_gsres_path}/Decoding/FCO_Dingbats",
      "${bsuni_gsres_path}/Decoding/FCO_Symbol",
      "${bsuni_gsres_path}/Decoding/FCO_Unicode",
      "${bsuni_gsres_path}/Decoding/FCO_Wingdings",
      "${bsuni_gsres_path}/Decoding/Latin1",
      "${bsuni_gsres_path}/Decoding/StandardEncoding",
      "${bsuni_gsres_path}/Decoding/Unicode",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/Decoding"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_encoding") {
    sources = [
      "${bsuni_gsres_path}/Encoding/CEEncoding",
      "${bsuni_gsres_path}/Encoding/ExpertEncoding",
      "${bsuni_gsres_path}/Encoding/ExpertSubsetEncoding",
      "${bsuni_gsres_path}/Encoding/NotDefEncoding",
      "${bsuni_gsres_path}/Encoding/Wingdings",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/Encoding"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_font") {
    sources = [
      "${bsuni_gsres_path}/Font/C059-BdIta",
      "${bsuni_gsres_path}/Font/C059-Bold",
      "${bsuni_gsres_path}/Font/C059-Italic",
      "${bsuni_gsres_path}/Font/C059-Roman",
      "${bsuni_gsres_path}/Font/D050000L",
      "${bsuni_gsres_path}/Font/NimbusMonoPS-Bold",
      "${bsuni_gsres_path}/Font/NimbusMonoPS-BoldItalic",
      "${bsuni_gsres_path}/Font/NimbusMonoPS-Italic",
      "${bsuni_gsres_path}/Font/NimbusMonoPS-Regular",
      "${bsuni_gsres_path}/Font/NimbusRoman-Bold",
      "${bsuni_gsres_path}/Font/NimbusRoman-BoldItalic",
      "${bsuni_gsres_path}/Font/NimbusRoman-Italic",
      "${bsuni_gsres_path}/Font/NimbusRoman-Regular",
      "${bsuni_gsres_path}/Font/NimbusSans-Bold",
      "${bsuni_gsres_path}/Font/NimbusSans-BoldItalic",
      "${bsuni_gsres_path}/Font/NimbusSans-Italic",
      "${bsuni_gsres_path}/Font/NimbusSans-Regular",
      "${bsuni_gsres_path}/Font/NimbusSansNarrow-Bold",
      "${bsuni_gsres_path}/Font/NimbusSansNarrow-BoldOblique",
      "${bsuni_gsres_path}/Font/NimbusSansNarrow-Oblique",
      "${bsuni_gsres_path}/Font/NimbusSansNarrow-Regular",
      "${bsuni_gsres_path}/Font/P052-Bold",
      "${bsuni_gsres_path}/Font/P052-BoldItalic",
      "${bsuni_gsres_path}/Font/P052-Italic",
      "${bsuni_gsres_path}/Font/P052-Roman",
      "${bsuni_gsres_path}/Font/StandardSymbolsPS",
      "${bsuni_gsres_path}/Font/URWBookman-Demi",
      "${bsuni_gsres_path}/Font/URWBookman-DemiItalic",
      "${bsuni_gsres_path}/Font/URWBookman-Light",
      "${bsuni_gsres_path}/Font/URWBookman-LightItalic",
      "${bsuni_gsres_path}/Font/URWGothic-Book",
      "${bsuni_gsres_path}/Font/URWGothic-BookOblique",
      "${bsuni_gsres_path}/Font/URWGothic-Demi",
      "${bsuni_gsres_path}/Font/URWGothic-DemiOblique",
      "${bsuni_gsres_path}/Font/Z003-MediumItalic",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/Font"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_idiomSet") {
    sources = [
      "${bsuni_gsres_path}/IdiomSet/PPI_CUtils",
      "${bsuni_gsres_path}/IdiomSet/Pscript5Idiom",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/IdiomSet"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_init") {
    sources = [
      "${bsuni_gsres_path}/Init/FAPIcidfmap",
      "${bsuni_gsres_path}/Init/FAPIconfig",
      "${bsuni_gsres_path}/Init/FAPIfontmap",
      "${bsuni_gsres_path}/Init/FCOfontmap-PCLPS2",
      "${bsuni_gsres_path}/Init/Fontmap",
      "${bsuni_gsres_path}/Init/Fontmap.GS",
      "${bsuni_gsres_path}/Init/cidfmap",
      "${bsuni_gsres_path}/Init/gs_agl.ps",
      "${bsuni_gsres_path}/Init/gs_btokn.ps",
      "${bsuni_gsres_path}/Init/gs_cet.ps",
      "${bsuni_gsres_path}/Init/gs_cff.ps",
      "${bsuni_gsres_path}/Init/gs_cidcm.ps",
      "${bsuni_gsres_path}/Init/gs_ciddc.ps",
      "${bsuni_gsres_path}/Init/gs_cidfm.ps",
      "${bsuni_gsres_path}/Init/gs_cidfn.ps",
      "${bsuni_gsres_path}/Init/gs_cidtt.ps",
      "${bsuni_gsres_path}/Init/gs_cmap.ps",
      "${bsuni_gsres_path}/Init/gs_cspace.ps",
      "${bsuni_gsres_path}/Init/gs_dbt_e.ps",
      "${bsuni_gsres_path}/Init/gs_diskn.ps",
      "${bsuni_gsres_path}/Init/gs_dps1.ps",
      "${bsuni_gsres_path}/Init/gs_dps2.ps",
      "${bsuni_gsres_path}/Init/gs_dscp.ps",
      "${bsuni_gsres_path}/Init/gs_epsf.ps",
      "${bsuni_gsres_path}/Init/gs_fapi.ps",
      "${bsuni_gsres_path}/Init/gs_fntem.ps",
      "${bsuni_gsres_path}/Init/gs_fonts.ps",
      "${bsuni_gsres_path}/Init/gs_frsd.ps",
      "${bsuni_gsres_path}/Init/gs_icc.ps",
      "${bsuni_gsres_path}/Init/gs_il1_e.ps",
      "${bsuni_gsres_path}/Init/gs_img.ps",
      "${bsuni_gsres_path}/Init/gs_init.ps",
      "${bsuni_gsres_path}/Init/gs_lev2.ps",
      "${bsuni_gsres_path}/Init/gs_ll3.ps",
      "${bsuni_gsres_path}/Init/gs_mex_e.ps",
      "${bsuni_gsres_path}/Init/gs_mgl_e.ps",
      "${bsuni_gsres_path}/Init/gs_mro_e.ps",
      "${bsuni_gsres_path}/Init/gs_pdf_e.ps",
      "${bsuni_gsres_path}/Init/gs_pdfwr.ps",
      "${bsuni_gsres_path}/Init/gs_res.ps",
      "${bsuni_gsres_path}/Init/gs_resmp.ps",
      "${bsuni_gsres_path}/Init/gs_setpd.ps",
      "${bsuni_gsres_path}/Init/gs_statd.ps",
      "${bsuni_gsres_path}/Init/gs_std_e.ps",
      "${bsuni_gsres_path}/Init/gs_sym_e.ps",
      "${bsuni_gsres_path}/Init/gs_trap.ps",
      "${bsuni_gsres_path}/Init/gs_ttf.ps",
      "${bsuni_gsres_path}/Init/gs_typ32.ps",
      "${bsuni_gsres_path}/Init/gs_typ42.ps",
      "${bsuni_gsres_path}/Init/gs_type1.ps",
      "${bsuni_gsres_path}/Init/gs_wan_e.ps",
      "${bsuni_gsres_path}/Init/pdf_main.ps",
      "${bsuni_gsres_path}/Init/xlatmap",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/Init"
    install_enable = true
  }

  ohos_copy("bsuni_driver_ghostscript_res_substcid") {
    sources = [
      "${bsuni_gsres_path}/SubstCID/CNS1-WMode",
      "${bsuni_gsres_path}/SubstCID/GB1-WMode",
      "${bsuni_gsres_path}/SubstCID/Japan1-WMode",
      "${bsuni_gsres_path}/SubstCID/Korea1-WMode",
    ]
    outputs = [ "${target_out_dir}/$target_name/{{source_file_part}}" ]
    part_name = "print_fwk"
    subsystem_name = "print"
    module_type = "etc"
    prebuilt = true
    module_source_dir = target_out_dir
    module_install_name = ""
    module_install_dir = "${bsuni_gsres_install_path}/SubstCID"
    install_enable = true
  }
}

group("bsuni_driver_group") {
  deps = []
  if (print_fwk_feature_bsuni_driver) {
    deps += [
      ":bsuni_driver_backend_bsuni",
      ":bsuni_driver_backend_lpd",
      ":bsuni_driver_backend_socket",
      ":bsuni_driver_filter",
      ":bsuni_driver_ghostscript_bin",
      ":bsuni_driver_ghostscript_lib",
      ":bsuni_driver_ghostscript_res_cidfont",
      ":bsuni_driver_ghostscript_res_cidfsubst",
      ":bsuni_driver_ghostscript_res_cmap",
      ":bsuni_driver_ghostscript_res_colorspace",
      ":bsuni_driver_ghostscript_res_decoding",
      ":bsuni_driver_ghostscript_res_encoding",
      ":bsuni_driver_ghostscript_res_font",
      ":bsuni_driver_ghostscript_res_idiomSet",
      ":bsuni_driver_ghostscript_res_init",
      ":bsuni_driver_ghostscript_res_substcid",
      ":bsuni_driver_sdk",
    ]
  }
}
