# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

if (print_fwk_feature_device_isolation) {
  _test_path = "${print_path}/test/phone_test"
  _service_path = "${print_path}/services/phone_service"
} else {
  _test_path = "${print_path}/test"
  _service_path = "${print_path}/services"
}

##############################fuzztest##########################################
ohos_fuzztest("PrintSecurityGuardManagerFuzzTest") {
  module_out_path = "${fuzz_test_output_path}/concurrent"

  fuzz_config_file = "${_test_path}/fuzztest/printsecurityguardmanager_fuzzer"

  include_dirs = [
    "${print_path}/frameworks/innerkitsimpl/print_impl/include",
    "${print_path}/frameworks/ohprint/include",
    "${_service_path}/print_service/include",
    "${print_utils_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  cflags_cc = []

  deps = [
    "${print_path}/frameworks/innerkitsimpl/print_impl:print_client",
    "${print_path}/frameworks/kits/extension:print_extension_framework",
    "${print_path}/frameworks/models/print_models:print_models",
    "${print_path}/interfaces/kits/napi/print_napi:print_napi",
    "${print_path}/services/print_service:print_service_test",
  ]

  sources = [
    "${_test_path}/fuzztest/printsecurityguardmanager_fuzzer/printsecurityguardmanager_fuzzer.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "jsoncpp:jsoncpp",
  ]

  if (security_guard_enabled) {
    external_deps += [
      "security_guard:libsg_collect_sdk",
      "time_service:time_client",
    ]
  }
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":PrintSecurityGuardManagerFuzzTest",
  ]
}
###############################################################################
