# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

ohos_fuzztest("ScanHelperFuzzTest") {
  module_out_path = fuzz_test_output_path

  fuzz_config_file = "${print_path}/test/fuzztest/scanhelper_fuzzer"

  include_dirs = [ 
    "${print_path}/frameworks/innerkitsimpl/scan_impl/include",
    "${print_path}/frameworks/helper/scan_helper/include",
    "${print_utils_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [ 
    "${print_path}/frameworks/helper/scan_helper:scan_helper",
    "${print_path}/frameworks/models/scan_models:scan_models",
    ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  if (security_guard_enabled) {
    external_deps += [
      "security_guard:libsg_collect_sdk",
      "time_service:time_client",
    ]
  }

  sources = [ "scanhelper_fuzzer.cpp" ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ScanHelperFuzzTest",
  ]
}
