# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

if (print_fwk_feature_device_isolation) {
  _scan_service_path = "${print_path}/services/phone_service/scan_service"
} else {
  _scan_service_path = "${print_path}/services/scan_service"
}

ohos_fuzztest("ScanPictureDataFuzzTest") {
  module_out_path = "${fuzz_test_output_path}/concurrent"

  fuzz_config_file = "${print_path}/test/fuzztest/scanpicturedata_fuzzer"

  include_dirs = [
    "${_scan_service_path}/include",
    "${print_path}/frameworks/innerkitsimpl/scan_impl/include",
    "${print_utils_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [
    "${_scan_service_path}:scan_service_test",
    "${print_path}/frameworks/models/scan_models:scan_models",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  sources = [ "scanpicturedata_fuzzer.cpp" ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    ":ScanPictureDataFuzzTest",
  ]
}